<resources>
    <string name="app_name">ToksoCat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_cat">main cat</string>
    <string name="toksocat">ToksoCat</string>
    <string name="toksocat_desc">An expert system that can help you to detect whether your cat has toxoplasmy</string>
    <string name="begin_test">Begin Test</string>
    <string name="about_us">About Us</string>
    <string name="back">Back</string>
    <string name="choose_1_answer">Choose 1 answer</string>
    <string name="made_with_love_by_us">Made with love by us</string>
    <string name="alvin_image">alvin image</string>
    <string name="alvin_nur_r">Alvin Nur R</string>
    <string name="iqbal_shafiq_r">Iqbal Shafiq R</string>
    <string name="iqbal_image">Iqbal Image</string>
    <string name="publisher_message">“This application was created to complete the final project of artificial intelligence course”</string>
    <string name="knowledge">Knowledge</string>
    <string name="result_status">result status</string>
    <string name="image_result">image result</string>
    <string name="result">Result</string>
    <string name="back_to_home">Back to Home</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="questions">Questions</string>
    <string name="knowledge_base">Knowledge Base</string>
    <string name="icon_trash">icon trash</string>
    <string name="add">Add</string>
    <string name="alternative_answers">Alternative Answers</string>
    <string name="choose_one_destination">Choose one destination</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="symptoms">Symptoms</string>
    <string name="diseases">Diseases</string>
    <string name="choose_one_category">Choose One category</string>
    <string name="add_disease">Add Disease</string>
    <string name="type_here">Type here ...</string>
</resources>