<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragments.AboutFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/made_with_love_by_us"
                android:textColor="@color/red_primary"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/alvin_image"
                    android:src="@drawable/alvin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="23dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/alvin_nur_r"
                    android:textColor="@color/red_primary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/iqbal_image"
                    android:src="@drawable/iqbal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="23dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/iqbal_shafiq_r"
                    android:textColor="@color/green_primary" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/publisher_message"
                android:textColor="@color/red_primary"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnKnowledge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/poppins_bold"
                android:paddingVertical="10dp"
                android:text="@string/knowledge"
                android:textAllCaps="false"
                android:textColor="@color/light_primary"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/light_secondary"
                android:fontFamily="@font/poppins_bold"
                android:paddingVertical="10dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/red_primary"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>