<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".view.fragments.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivResult"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="117dp"
            android:contentDescription="@string/image_result"
            android:src="@drawable/sad_cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivStatus"
            android:layout_width="74dp"
            android:layout_height="67dp"
            android:contentDescription="@string/result_status"
            android:src="@drawable/ic_warning"
            app:layout_constraintBottom_toTopOf="@id/ivResult"
            app:layout_constraintStart_toEndOf="@id/ivResult" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivResult">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/red_primary"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                tools:text="Anda terindikasi terkena Toksoplasmosis Kongenital"
                android:textColor="@color/red_primary"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/poppins_bold"
                android:paddingVertical="10dp"
                android:text="@string/back_to_home"
                android:textAllCaps="false"
                android:textColor="@color/light_primary"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>