<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    tools:context=".view.fragments.QuestionerFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQuestionPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/red_primary"
                android:textSize="24sp"
                android:layout_marginStart="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:text="@string/questions" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/red_primary"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestionPage"
                tools:text="What do you think about the liveliness of your cat?" />

            <TextView
                android:id="@+id/tvChooseAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/red_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
                android:text="@string/choose_1_answer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:orientation="vertical"
                android:paddingHorizontal="35dp"
                app:layout_constraintTop_toBottomOf="@id/tvChooseAnswer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="11dp"
                    android:background="@drawable/btn_answer"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:paddingVertical="14dp"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/red_primary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="11dp"
                    android:background="@drawable/btn_answer"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:paddingVertical="14dp"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/red_primary"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

