<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_primary"
    android:orientation="vertical"
    tools:context=".view.fragments.knowledgebase.KnowledgeBaseFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvKnowledgeBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/knowledge_base"
        android:textColor="@color/red_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKnowledgeBase"
        tools:itemCount="3"
        tools:listitem="@layout/item_question" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_primary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        android:paddingTop="40dp"
        android:paddingBottom="30dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/light_secondary"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/red_primary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/light_primary"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>